2006-06-14  Aaron Stone  <aaron@serendipity.cx>

	* contrib/dbmail-removeversion.patch, contrib/dbmail.spec,
	contrib/startup-scripts/redhat/:
	RedHat-style RPM spec and init scripts contributed by J. Simonetti.

2006-06-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c, 
	  dbmail-message.h, imapcommands.c:
	avoid duplicate insertion of headername/headervalue pairs (bug #282)

2006-06-14  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c, modules/sortsieve.c:
	Get the Delivered-To header for a from address for redirect. Don't use
	To as a backup for redirect or reply because it's untrustworthy. Use
	envelope recipient if Delivered-To is not found.

2006-06-13  Paul J Stevens <paul@nfg.nl>

	* ChangeLog:
	cleanup Changelog
	* dbmail.schema:
	added mailHost attribute. dbmail.schema now conflicts with misc.schema
	so use one or the other
	* pool.c:
	prevent parent from hanging when child fails to die (bug: #363)

2006-06-09  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c:
	Couple more from and memory cleanups (closes bug #359 again).
	* debug.h, debug.c:
	Added trace level to the debug output. Started sketching newtrace
	function.
	* dbmail-imapsession.c:
	Removed TRACE_FATAL from dbmail_imap_session_printf (closes bug #361).

2006-06-08  Aaron Stone  <aaron@serendipity.cx>

	* pipe.h, pipe.c, modules/sortsieve.c:
	Removed free's of returns from dbmail_message_get_headers as they are
	const. Added handle argument to send_vacation to prevent loops. Added
	headers to declare all generated messages as UTF-8.
	* db.c, dbmail-imapsession.c:
	Accepted memory leak patch by Ryo (closes bug #360).
	* pipe.c, modules/sortsieve.c:
	Resolved corner cases of missing from's and to's for replies and
	vacations (closes bug #359).

2006-06-07  Aaron Stone  <aaron@serendipity.cx>

	* db.h, db.c, modules/db*.c, dbmailtypes.h:
	Dropped the REGEXP stuff and switched to LIKE/ILIKE pairs. Added sql